Tables: remove white-space:nowrap to resolve the conflict on WooCommerce 8.x cart

--- a/src/scss/elements/_tables.scss
+++ b/src/scss/elements/_tables.scss
@@ -31,7 +31,6 @@ table {
     padding: var(--theme-spacing-fluid-smaller);
     padding: 0.5em;
     max-width:100%;
-    white-space:nowrap;
     border: 0;
   }
 
